--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -39,9 +39,80 @@
     </properties>
 
     <build>
-        <!-- plugin management -->
+        <!-- plugin management 以下插件子模块自动继承，不必引入 -->
         <pluginManagement>
             <plugins>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>1.13</version>
+                    <configuration>
+                        <!-- config for license:aggregate-add-third-party -->
+                        <outputDirectory>${project.basedir}</outputDirectory>
+                        <thirdPartyFilename>LICENSE-3RD-PARTY</thirdPartyFilename>
+                        <fileTemplate>/org/codehaus/mojo/license/third-party-file-groupByLicense.ftl</fileTemplate>
+                        <useMissingFile>true</useMissingFile>
+                        <missingFile>${project.basedir}/LICENSE-3RD-PARTY.properties</missingFile>
+                        <aggregateMissingLicensesFile>${project.basedir}/LICENSE-3RD-PARTY.properties</aggregateMissingLicensesFile>
+                        <licenseMerges>
+                            <licenseMerge>Apache 2.0|ASL, version 2|http://www.apache.org/licenses/LICENSE-2.0.txt|http://asm.ow2.org/license.html|The Apache License, Version 2.0|Apache License|Apache License Version 2|Apache License Version 2.0|Apache Software License - Version 2.0|Apache 2.0 License|Apache License 2.0|ASL|Apache 2|Apache-2.0|the Apache License, ASL Version 2.0|The Apache Software License, Version 2.0|Apache License, Version 2.0|Apache Public License 2.0</licenseMerge>
+                            <licenseMerge>BSD|The BSD 3-Clause License|The BSD License|Modified BSD License|New BSD License|New BSD license|Two-clause BSD-style license|BSD licence|BSD New|The New BSD License|BSD 3-Clause|BSD 3-clause</licenseMerge>
+                            <licenseMerge>MIT|MIT License|The MIT License</licenseMerge>
+                            <licenseMerge>LGPL|LGPL, version 2.1|GNU Library or Lesser General Public License (LGPL) V2.1|GNU Lesser General Public License (LGPL), Version 2.1|GNU Lesser General Public License, Version 2.1|LGPL 2.1</licenseMerge>
+                            <licenseMerge>CDDL|CDDL+GPL|CDDL+GPL License|CDDL + GPLv2 with classpath exception|CDDL License|CDDL 1.0|CDDL 1.1|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0|Common Development and Distribution License (CDDL) v1.0</licenseMerge>
+                            <licenseMerge>EPL|Eclipse Public License - Version 1.0</licenseMerge>
+                            <licenseMerge>GPL|GPL2 w/ CPE|GPLv2+CE|GNU General Public Library</licenseMerge>
+                            <licenseMerge>MPL|MPL 1.1</licenseMerge>
+                            <licenseMerge>Public Domain</licenseMerge>
+                            <licenseMerge>Common Public License|Common Public License Version 1.0</licenseMerge>
+                            <licenseMerge>CC0|CC0 1.0 Universal|Public Domain, per Creative Commons CC0</licenseMerge>
+                            <licenseMerge>Unknown License|Unknown license</licenseMerge>
+                        </licenseMerges>
+
+                        <!-- config for license:aggregate-download-licenses -->
+                        <aggregateDownloadLicenses.executeOnlyOnRootModule>true</aggregateDownloadLicenses.executeOnlyOnRootModule>
+                        <!--<licensesConfigFile>${project.basedir}/lic/config/licenses.xml</licensesConfigFile>-->
+                        <licensesOutputFile>${project.basedir}/lic/licenses.xml</licensesOutputFile>
+                        <licensesOutputDirectory>${project.basedir}/lic/licenses/</licensesOutputDirectory>
+
+                        <!-- config for license:update-file-header -->
+                        <licenseName>lgpl_v3</licenseName>
+                        <inceptionYear>2020</inceptionYear>
+                        <organizationName>shoulder</organizationName>
+                        <projectName>shoulder-framework</projectName>
+                        <roots>
+                            <root>src/main/java</root>
+                            <root>src/test/java</root>
+                        </roots>
+                        <includes>
+                            <include>**/*.java</include>
+                            <include>**/*.xml</include>
+                            <include>**/*.sh</include>
+                            <include>**/*.py</include>
+                            <include>**/*.properties</include>
+                            <include>**/*.sql</include>
+                            <include>**/*.html</include>
+                            <include>**/*.less</include>
+                            <include>**/*.css</include>
+                            <include>**/*.js</include>
+                            <include>**/*.json</include>
+                        </includes>
+                        <extraExtensions>
+                            <scala>java</scala>
+                        </extraExtensions>
+                        <canUpdateCopyright>true</canUpdateCopyright>
+                        <canUpdateDescription>true</canUpdateDescription>
+                        <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+                        <emptyLineAfterHeader>true</emptyLineAfterHeader>
+                        <processStartTag>&lt;&lt;</processStartTag>
+                        <processEndTag>&gt;&gt;</processEndTag>
+                        <sectionDelimiter>==</sectionDelimiter>
+
+                        <!-- config for mvn license:update-project-license -->
+                        <licenseFile>${project.basedir}/LICENSE</licenseFile>
+                    </configuration>
+                </plugin>
 
                 <!-- attach source into jar -->
                 <plugin>
