--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# IDEA
+.idea
+*.iml
+
 # Package Files #
 *.jar
 *.war
@@ -18,6 +22,8 @@
 *.zip
 *.tar.gz
 *.rar
+
+target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
