更新日志框架，支持 @OperateLog 嵌套使用

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,18 @@
 
     <build>
         <plugins>
+            <!-- UTF8 coding -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+
             <!-- jar包 包含源码 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
