--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -39,9 +39,22 @@
     </properties>
 
     <build>
+
         <!-- plugin management 以下插件子模块自动继承，不必引入 -->
         <pluginManagement>
             <plugins>
+
+                <!-- UTF8 coding -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                    </configuration>
+                </plugin>
 
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
