--- a/shoulder-build/shoulder-base/shoulder-log-business/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-log-business/pom.xml
@@ -14,6 +14,12 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.shoulder</groupId>
+            <artifactId>shoulder-core</artifactId>
+        </dependency>
+
         <!-- spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
