--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -35,14 +35,20 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- api-doc openApi(swagger)是行业标准, swagger2终止于2107年，因此选用17更名后的 io.swagger.core.v3 -->
-        <!-- knife4j 前身是 swagger-bootstrap-ui -->
-        <!--<knife4j.version>2.0.2</knife4j.version>
-
-        <swagger-ui.version>1.9.0</swagger-ui.version>
-        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>-->
+        <!-- api-doc OPEN-API2 -->
         <swagger.version>1.6.1</swagger.version>
+        <!-- 使用 springfox 解析文档，管理 swagger2 的版本号 -->
+        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
+        <!-- knife4j 前身是 swagger-bootstrap-ui，一个用于优化 swagger-ui 的项目，视觉效果更好 -->
+
+        <!--<knife4j.version>2.0.3</knife4j.version>
+
+        -->
+        <!-- openApi(swagger)是行业标准，swagger 17更名为 io.swagger.core.v3 但 swagger2 绝大多数开发者更熟悉而非 swagger3 -->
+
+        <!-- api-doc OPEN-API3 -->
         <swagger3.version>2.1.2</swagger3.version>
+        <!-- springdoc-openapi 是一个基于 oenapi3（swagger3）的，类似于springfox与swagger2的关系，它可能是未来 -->
         <springdoc-openapi.version>1.3.0</springdoc-openapi.version>
 
         <!-- apache-common-tools -->
@@ -75,7 +81,7 @@
         <mysql.version>8.0.19</mysql.version>
         <postgresql.version>42.2.5</postgresql.version>
         <druid.version>1.1.21</druid.version>
-        <mybatis-plus.version>3.3.1</mybatis-plus.version>
+        <mybatis-plus.version>3.3.2</mybatis-plus.version>
 
 
         <!-- log-trace -->
@@ -316,34 +322,30 @@
                 <version>${swagger.version}</version>
                 <optional>true</optional>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
-            <dependency>
+
+            <!--<dependency>
                 <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger3.version}</version>
                 <optional>true</optional>
-            </dependency>
+            </dependency>-->
 
             <!-- swagger3 springboot 2.2.x可能不支持，2.1.x支持 -->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-webmvc-core</artifactId>
                 <version>${springdoc-openapi.version}</version>
-            </dependency>
-            <!-- swagger3 springboot 2.2.x可能不支持，2.1.x支持 -->
-            <!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
-
-            <dependency>
+            </dependency>-->
+            <!--<dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>${springdoc-openapi.version}</version>
-            </dependency>
-
-            <dependency>
+            </dependency>-->
+            <!--<dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-security</artifactId>
                 <version>${springdoc-openapi.version}</version>
-            </dependency>
+            </dependency>-->
 
 
             <!--Commons begin -->
