--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -13,13 +13,15 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>shoulder-starter-web</module>
-        <module>shoulder-starter-crypto</module>
         <module>shoulder-autoconfiguration</module>
         <module>shoulder-starter</module>
+
+        <module>shoulder-starter-web</module>
+        <module>shoulder-starter-crypto</module>
         <module>shoulder-starter-code</module>
-        <module>shoulder-auth-server-starter</module>
+        <module>shoulder-starter-auth-server</module>
         <module>shoulder-starter-trace</module>
+        <module>shoulder-starter-minio</module>
     </modules>
 
 
