--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -20,14 +20,14 @@
         <shoulder.version>${project.version}</shoulder.version>
 
         <!-- dependencies bom -->
-        <spring.version>5.2.4.RELEASE</spring.version>
-        <!-- dependency spring 5.2.4 -->
-        <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
-        <!-- dependency spring 5.2.3 -->
-        <spring-security.version>5.2.2.RELEASE</spring-security.version>
-        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-        <fastjson.version>1.2.66</fastjson.version>
-        <spring-cloud-alibaba.version>2.1.0.RELEASE</spring-cloud-alibaba.version>
+        <!--<spring.version>5.2.4.RELEASE</spring.version>-->
+        <!-- spring 5.2.4 -->
+        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>
+        <!-- 由于Spring Boot提供了Maven BOM来管理依赖版本，因此您无需指定版本 -->
+        <!--<spring-security.version></spring-security.version>-->
+        <!-- 与 boot 版本对应关系 https://start.spring.io/actuator/info -->
+        <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
 
         <!-- build -->
         <java.version>11</java.version>
@@ -40,7 +40,7 @@
         <!-- 使用 springfox 解析文档，管理 swagger2 的版本号 -->
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
         <!-- knife4j 前身是 swagger-bootstrap-ui，一个用于优化 swagger-ui 的项目，视觉效果更好 -->
-        <knife4j.version>2.0.3</knife4j.version>
+        <!--<knife4j.version>2.0.4</knife4j.version>-->
 
         <!-- api-doc OPEN-API3 -->
         <!-- openApi(swagger)是行业标准，swagger 17更名为 io.swagger.core.v3 但 swagger2 绝大多数开发者更熟悉而非 swagger3 -->
@@ -50,27 +50,27 @@
 
         <!-- apache-common-tools -->
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <commons-codec.version>1.10</commons-codec.version>
+        <commons-codec.version>1.14</commons-codec.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-exec.version>1.3</commons-exec.version>
         <commons-email.version>1.5</commons-email.version>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-lang3.version>3.5</commons-lang3.version>
+        <commons-io.version>2.7</commons-io.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
         <commons-net.version>3.6</commons-net.version>
-        <commons-daemon.version>1.1.0</commons-daemon.version>
+        <commons-daemon.version>1.2.2</commons-daemon.version>
 
+
+        <jna.version>5.5.0</jna.version>
         <!-- useful tools -->
-        <hutool.version>5.2.3</hutool.version>
-        <guava.version>27.0.1-jre</guava.version>
+        <hutool.version>5.3.8</hutool.version>
+        <guava.version>29.0-jre</guava.version>
 
-        <alibaba.transmittable.version>2.11.4</alibaba.transmittable.version>
-
-        <bcprov.jdk15on.version>1.60</bcprov.jdk15on.version>
-        <bcpkix.jdk15on.version>1.64</bcpkix.jdk15on.version>
-        <caffeine.version>2.8.0</caffeine.version>
+        <bcprov.jdk15on.version>1.65.01</bcprov.jdk15on.version>
+        <bcpkix.jdk15on.version>1.65</bcpkix.jdk15on.version>
+        <caffeine.version>2.8.5</caffeine.version>
 
         <!-- tools-file -->
-        <tika-core.version>1.20</tika-core.version>
+        <tika-core.version>1.24.1</tika-core.version>
         <opencsv.version>4.1</opencsv.version>
 
 
@@ -85,12 +85,11 @@
 
 
         <!-- log-trace -->
-        <brave.version>5.8.0</brave.version>
-        <skywalking.version>7.0.0</skywalking.version>
+        <brave.version>5.12.3</brave.version>
 
         <!-- test -->
         <mockito-all.version>1.10.19</mockito-all.version>
-        <powermock.version>1.7.1</powermock.version>
+        <powermock.version>1.7.4</powermock.version>
     </properties>
 
     <!--
@@ -117,13 +116,13 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-bom</artifactId>
                 <version>${spring-security.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 
             <!-- spring cloud -->
             <!-- https://cloud.spring.io/spring-cloud-static/Hoxton.SR3/reference/html/spring-cloud.html -->
@@ -135,13 +134,6 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- spring cloud alibaba, TIP: put fastJson front of other alibaba dependencies because of it always cause leaks -->
-
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
-            </dependency>
 
             <!-- https://spring-cloud-alibaba-group.github.io/github-pages/greenwich/spring-cloud-alibaba.html -->
             <dependency>
@@ -322,11 +314,11 @@
                 <version>${springfox-swagger2.version}</version>
             </dependency>
 
-            <dependency>
+            <!--<dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
-            </dependency>
+            </dependency>-->
 
 
             <!--<dependency>
@@ -400,6 +392,7 @@
                 <version>${guava.version}</version>
             </dependency>
 
+            <!-- java native access -->
             <dependency>
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna</artifactId>
@@ -419,14 +412,6 @@
                 <artifactId>bcpkix-jdk15on</artifactId>
                 <version>${bcpkix.jdk15on.version}</version>
             </dependency>
-
-            <!-- inheritable threadLocal -->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>transmittable-thread-local</artifactId>
-                <version>${alibaba.transmittable.version}</version>
-            </dependency>
-
 
             <!-- spring boot已经管掉 JDK 11 兼容 jdk8 的相关依赖 -->
 
@@ -475,11 +460,6 @@
                 <artifactId>brave-context-slf4j</artifactId>
                 <version>${brave.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.apache.skywalking</groupId>
-                <artifactId>apm-toolkit-logback-1.x</artifactId>
-                <version>${skywalking.version}</version>
-            </dependency>
             <!-- log-trace end -->
 
             <dependency>
@@ -490,7 +470,7 @@
 
 
             <!-- spring basepackage start -->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aop</artifactId>
                 <version>${spring.version}</version>
@@ -501,7 +481,7 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
                 <scope>provided</scope>
-            </dependency>
+            </dependency>-->
             <!-- spring basepackage end -->
 
             <!-- test -->
