--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -64,6 +64,7 @@
         <!-- useful tools -->
         <hutool.version>5.3.8</hutool.version>
         <guava.version>29.0-jre</guava.version>
+        <alibaba.transmittable.version>2.11.4</alibaba.transmittable.version>
 
         <bcprov.jdk15on.version>1.65.01</bcprov.jdk15on.version>
         <bcpkix.jdk15on.version>1.65</bcpkix.jdk15on.version>
@@ -136,13 +137,13 @@
 
 
             <!-- https://spring-cloud-alibaba-group.github.io/github-pages/greenwich/spring-cloud-alibaba.html -->
-            <dependency>
+            <!--<dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 
             <!-- ================================== Shoulder-framework party ==================================== -->
 
@@ -151,6 +152,7 @@
                 <groupId>org.shoulder</groupId>
                 <artifactId>shoulder-lombok</artifactId>
                 <version>${shoulder-lombok.version}</version>
+                <optional>true</optional>
             </dependency>
 
             <dependency>
@@ -399,6 +401,12 @@
                 <version>${jna.version}</version>
             </dependency>
 
+            <!-- inheritable threadLocal -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>transmittable-thread-local</artifactId>
+                <version>${alibaba.transmittable.version}</version>
+            </dependency>
 
             <!-- crypto -->
             <dependency>
