--- a/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.shoulder</groupId>
+        <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
@@ -46,13 +46,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.shoulder</groupId>
+            <groupId>cn.itlym</groupId>
             <artifactId>shoulder-core</artifactId>
         </dependency>
 
         <!-- 密钥交换依赖 -->
         <dependency>
-            <groupId>org.shoulder</groupId>
+            <groupId>cn.itlym</groupId>
             <artifactId>shoulder-http</artifactId>
             <optional>true</optional>
         </dependency>
