--- a/shoulder-build/shoulder-starters/shoulder-starter-trace/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-trace/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.shoulder</groupId>
+        <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
@@ -32,7 +32,7 @@
         return Sampler.ALWAYS_SAMPLE;
     }
 
-        spring.zipkin.baseUrl=http://119.3.65.142:9411/
+        spring.zipkin.baseUrl=http://xxx:9411/
         spring.zipkin.sender.type=web
 
         spring.rabbitmq.host=my.site
