--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.shoulder</groupId>
+        <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -14,7 +14,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.shoulder</groupId>
+                <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-dependencies</artifactId>
                 <version>${project.parent.version}</version>
                 <type>pom</type>
@@ -160,6 +160,7 @@
                     <version>${maven-gpg-plugin.version}</version>
                     <executions>
                         <execution>
+                            <id>sign-artifacts</id>
                             <phase>verify</phase>
                             <goals>
                                 <goal>sign</goal>
